# Multithreaded-actor-system

./: .gitignore  CMakeLists.txt  README.md
cpp/: CMakeLists.txt
cpp/include/: AtomConfig.hpp  CityTypes.hpp  Getter.hpp  MainActor.hpp  Printer.hpp  ResultAccumulator.hpp  Sender.hpp  SocketUtils.hpp  Utils.hpp  Worker.hpp
cpp/src/: Getter.cpp  Main.cpp  MainActor.cpp  Printer.cpp  ResultAccumulator.cpp  Sender.cpp  SocketUtils.cpp  Utils.cpp  Worker.cpp
data/: dataset_1.json  dataset_2.json  dataset_3.json  dataset_4.json
python/: getter.py  main.py  sender.py  worker.py
results/: cities.txt  results.txt
